fastmetrics-derive/tests/ui/fail/register/flatten_cannot_coexist_with_other_attrs.stderr
error: `flatten` attribute cannot coexist with other attributes
 --> tests/ui/fail/register/flatten_cannot_coexist_with_other_attrs.rs:9:5
  |
9 |     #[register(flatten, rename = "inner")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
